# intel-ai

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/agents/: analyst.rs  collector.rs  discovery.rs  meta_agent.rs  mod.rs  personalizer.rs  verifier.rs
src/analysis/: mod.rs
src/api/: handlers.rs  mod.rs
src/auth/: oauth.rs  token_store.rs
src/config/: mod.rs
src/intelligence/: fetcher.rs  llm.rs  mod.rs  search.rs
src/personalization/: mod.rs
src/pipeline/: mod.rs
src/sources/: mod.rs
src/storage/: mod.rs  pg.rs  search.rs  vector.rs
src/verification/: mod.rs
tests/: test_api.sh
